objects/License_Procurement__c.object
<CustomObject>
    <description>A child object with master-detail relationship to the above object contains licenses procured with month and year. A status field to capture if the licenses are still active or not.</description>
    <fields>
        <fullName>Available_Licenses_Name__c</fullName>
        <description>Type of Available Licenses in selected License Catagory</description>
        <inlineHelpText>Type of Available Licenses in selected License Catagory</inlineHelpText>
        <label>Available Licenses Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>License_Catagories__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Available_Licenses_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Catagories__c</fullName>
        <description>Categories of Salesforce License Offerings</description>
        <inlineHelpText>Categories of Licenses</inlineHelpText>
        <label>License Catagories</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Catagories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Expiry_Date__c</fullName>
        <description>Date at which licenses will get expired or to be renewed.</description>
        <inlineHelpText>Date at which licenses will get expired or to be renewed.</inlineHelpText>
        <label>License Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Procurement_Number__c</fullName>
        <description>Auto Number to uniquely identify the Licenses Procurement done</description>
        <displayFormat>LPN#{YYYY}-{MM}-{000000}</displayFormat>
        <inlineHelpText>Unique Identifier for License Procurement</inlineHelpText>
        <label>License Procurement Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <description>The license record procurement is attached to</description>
        <inlineHelpText>The license record, procurement is attached to</inlineHelpText>
        <label>License</label>
        <referenceTo>Licenses__c</referenceTo>
        <relationshipLabel>License Procurements</relationshipLabel>
        <relationshipName>License_Procurements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_licenses_procured__c</fullName>
        <description>Total number of licenses procured</description>
        <inlineHelpText>Total number of licenses procured</inlineHelpText>
        <label>Number of licenses procured</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procurement_Date__c</fullName>
        <description>Date of License Procurement</description>
        <inlineHelpText>Date of License Procurement</inlineHelpText>
        <label>Procurement Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Procuring_Business__c</fullName>
        <description>Business procuring the licenses</description>
        <inlineHelpText>Business procuring the licenses</inlineHelpText>
        <label>Procuring Business</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Procuring_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of procured licenses</description>
        <inlineHelpText>Status of procured licenses</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>License Procurement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Available_Licenses_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>License_Catagories__c</columns>
        <columns>Number_of_licenses_procured__c</columns>
        <columns>Procurement_Date__c</columns>
        <columns>Procuring_Business__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Procured_Licenses</fullName>
        <columns>License_Procurement_Number__c</columns>
        <columns>NAME</columns>
        <columns>Licenses__c</columns>
        <columns>Procuring_Business__c</columns>
        <columns>License_Catagories__c</columns>
        <columns>Available_Licenses_Name__c</columns>
        <columns>Number_of_licenses_procured__c</columns>
        <columns>Procurement_Date__c</columns>
        <columns>License_Expiry_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Procured Licenses</label>
    </listViews>
    <nameField>
        <label>License Procurement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Procurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>